solved animation clipping because wrong delays

--- a/portfoliov2/src/Components/ContactCard/ContactCard-style.css
+++ b/portfoliov2/src/Components/ContactCard/ContactCard-style.css
@@ -22,7 +22,7 @@
    text-transform: uppercase;
    margin-top: 1%;
    padding: 2%;
-   transition: all .5s;
+   transition: all .25s;
 }
 
 ::-webkit-full-page-media, _:future, :root .linked-in-link {
@@ -69,7 +69,7 @@
   visibility: visible;
   -webkit-animation: fade-in .2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
   animation: fade-in .2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-  animation-delay: .2s;  
+  animation-delay: .35s;  
 
 }
 
